bug 85059, r=ftang, sr=alecf, PDT+ if the user defined font fails to load, point to an empty char map instead of a null pointer.